netfilter: conntrack: disable generic tracking for known protocols (bsc#913059, CVE-2014-8160).

--- a/series.conf
+++ b/series.conf
@@ -5043,6 +5043,7 @@
 	patches.fixes/netfilter-make-proc-net-netfilter-pernet.patch
 	patches.fixes/netfilter-nfnetlink_queue-add-net-namespace-support-.patch
 	patches.kabi/kabi-protect-struct-net-from-bnc-877013-changes.patch
+	patches.fixes/netfilter-conntrack-disable-generic-tracking-for-known-protos.patch
 
 	########################################################
 	# PCI and PCI hotplug
