x86_64, switch_to(): Load TLS descriptors before switching DS and ES (bsc#911326, CVE-2014-9419).

--- a/series.conf
+++ b/series.conf
@@ -490,6 +490,9 @@
 +agraf	patches.arch/kvm-split-the-KVM-pv-ops-support-by-feature
 +agraf	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
+	# bsc#911326, CVE-2014-9419
+	patches.arch/x86_64-switch_to-load-tls-descriptors-before-switching-ds-and-es.patch
+
 	# These are a partial forward-port of agraf's patches above that
 	# only carry the MMU portions of the removal.
 	# bnc#754690
