splice: add generic_write_checks() (bnc#915322 CVE-2014-7822).

--- a/series.conf
+++ b/series.conf
@@ -1684,6 +1684,8 @@
 	# fix dcache exit scaling
 	patches.fixes/fix-dcache-exit-scaling.patch
 
+	patches.fixes/splice-add-generic_write_checks.patch
+
 	########################################################
 	# IPC patches
 	########################################################
