--- a/series.conf
+++ b/series.conf
@@ -599,6 +599,9 @@
 	patches.arch/x86-thermal-reenable-power-limit-notification-interrupt.patch
 	patches.arch/ptrace-x86-force-IRET-path-after-a-ptrace_stop.patch
 
+	# bsc#917839, CVE-2015-1593
+	patches.arch/x86-mm-aslr-fix-stack-randomization-on-64-bit-systems.patch
+
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
 	########################################################
