--- a/series.conf
+++ b/series.conf
@@ -17318,6 +17318,7 @@
 	patches.xen/xen-netback-kernel-threads
 	patches.xen/xen-netback-tx-queue-len
 	patches.xen/xen-netfront-poll
+	patches.xen/xen-pciback-decode
 	patches.xen/xen-vscsi-large-requests
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
