usbback: copy only filled buffers to guest (bsc#917830 CVE-2015-0777).

--- a/series.conf
+++ b/series.conf
@@ -17320,6 +17320,7 @@
 	patches.xen/xen-netfront-poll
 	patches.xen/xen-pciback-decode
 	patches.xen/xen-vscsi-large-requests
+	patches.xen/xen-usbback-limit-copying
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
 	patches.xen/xen-x86-panic-no-reboot
