- scsifront: don't use bitfields for indicators modified under   different locks. - MSI: also reject resource with flags all clear. - pvscsi: support suspend/resume (bsc#902286). - x86: irq: Check for valid irq descriptor   incheck_irq_vectors_for_cpu_disable (bnc#914726). - x86_64, switch_to(): Load TLS descriptors before switching DS   and ES (bsc#911326, CVE-2014-9419). - Refresh other Xen patches.

--- a/series.conf
+++ b/series.conf
@@ -17159,6 +17159,9 @@
 	patches.xen/1265-usbback-access-req-once.patch
 	patches.xen/1270-x86_64-MCE-Dom0-bank-vs-CPU.patch
 	patches.xen/1273-scsifront-locking-when-ring-full.patch
+	patches.xen/1276-scsifront-separate-flags.patch
+	patches.xen/1278-PCI-MSI-reject-res-with-clear-flags.patch
+	patches.xen/1279-vscsi-suspend-resume.patch
 
 	# changes outside arch/{i386,x86_64}/xen
 	patches.xen/xen3-fixup-kconfig
@@ -17214,6 +17217,7 @@
 	patches.xen/xen3-patch-3.0.77-78
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
+	patches.xen/xen3-x86_64-switch_to-load-tls-descriptors-before-switching-ds-and-es.patch
 	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-x86_amd_interlagos_mem_alignment_perf_improve_2_4.patch
 	patches.xen/xen3-x86-dumpstack-Fix-printk_address-for-direct-addresse.patch
@@ -17273,6 +17277,7 @@
 	patches.xen/xen3-x86_64-traps-stop-using-ist-for-ss.patch
 	patches.xen/xen3-x86_64-traps-rework-bad_iret.patch
 	patches.xen/xen3-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
+	patches.xen/xen3-x86-irq-check-for-valid-irq-descriptor-in-check_irq_vectors_for_cpu_disable
 
 	# bugfixes and enhancements
 	patches.xen/xen-hypercall-symbols
