KEYS: close race between key lookup and freeing (bnc#912202, CVE-2014-9529).

--- a/series.conf
+++ b/series.conf
@@ -16627,6 +16627,9 @@
 
 	patches.fixes/KEYS-Fix-stale-key-registration-at-error-path
 
+	# bnc#912202
+	patches.fixes/0001-KEYS-close-race-between-key-lookup-and-freeing.patch
+
         ##########################################################
         # Kernel firmware sign FATE#314574
         ##########################################################
