--- a/series.conf
+++ b/series.conf
@@ -21917,6 +21917,7 @@
 	patches.xen/xen3-patch-3.0.77-78
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
+	patches.xen/xen3-x86_64-switch_to-load-tls-descriptors-before-switching-ds-and-es.patch
 	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-x86_amd_interlagos_mem_alignment_perf_improve_2_4.patch
 	patches.xen/xen3-x86-dumpstack-Fix-printk_address-for-direct-addresse.patch
@@ -21978,7 +21979,9 @@
 	patches.xen/xen3-x86_64-traps-fix-the-espfix64-df-fixup-and-rewrite-it-in-c.patch
 	patches.xen/xen3-x86_64-traps-stop-using-ist-for-ss.patch
 	patches.xen/xen3-x86_64-traps-rework-bad_iret.patch
-	patches.xen/xen3-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
+	patches.xen/xen3-x86-irq-check-for-valid-irq-descriptor-in-check_irq_vectors_for_cpu_disable
+	patches.xen/xen3-01-x86-tls-ldt-stop-checking-lm-in-ldt_empty.patch
+	patches.xen/xen3-02-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
 	patches.xen/xen3-0001-x86-efi-Add-EFI-framebuffer-earlyprintk-support.patch
 
 	# bugfixes and enhancements
