net: sctp: fix slab corruption from use after free on INIT collisions (bsc#915577, CVE-2015-1421).

--- a/series.conf
+++ b/series.conf
@@ -3310,6 +3310,7 @@
 	patches.fixes/netxen-fix-off-by-one-bug-in-netxen_release_tx_buffe.patch
 	patches.fixes/dlm-set-zero-linger-time-on-sctp-socket.patch
 	patches.fixes/net-Do-not-enable-tx-nocache-copy-by-default.patch
+	patches.fixes/net-sctp-fix-slab-corruption-from-use-after-free-on-INIT.patch
 
 	########################################################
 	# Wireless Networking
