net: sctp: fix slab corruption from use after free on INIT collisions (bsc#915577, CVE-2015-1421).

--- a/series.conf
+++ b/series.conf
@@ -12588,6 +12588,7 @@
 	patches.fixes/virtio_net-drop-dst-reference-before-transmitting-a-.patch
 	patches.fixes/net-sctp-fix-panic-on-duplicate-ASCONF-chunks.patch
 	patches.fixes/net-sctp-fix-remote-memory-pressure-from-excessive-q.patch
+	patches.fixes/net-sctp-fix-slab-corruption-from-use-after-free-on-INIT.patch
 	patches.fixes/netlink-add-privilege-check-of-socket-opener.patch
 	patches.fixes/infiniband-ipoib-sanitize-neighbour-handling-in-ipoi.patch
 	patches.fixes/ipoib-convert-over-to-dev_lookup_neigh_skb.patch
