x86/asm/entry/64: Remove a bogus 'ret_from_fork' optimization (bsc#926240, CVE-2015-2830).

--- a/series.conf
+++ b/series.conf
@@ -508,6 +508,9 @@
 
 	patches.fixes/x86-dumpstack-Fix-printk_address-for-direct-addresse.patch
 
+	# bsc#926240, CVE-2015-2830
+	patches.arch/x86-asm-entry-64-remove-a-bogus-ret_from_fork-optimization.patch
+
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
 	########################################################
