net: rds: use correct size for max unacked packets and bytes (bsc#919018 CVE-2015-2042).

--- a/series.conf
+++ b/series.conf
@@ -3138,6 +3138,7 @@
 	patches.drivers/mlx4_en-Assigning-TX-irq-per-ring.patch
 	patches.drivers/mlx4_en-map-entire-pages-to-increase-throughput
 	patches.drivers/rds-no-bug-in-xmit-for-loopback.patch
+	patches.fixes/net-rds-use-correct-size-for-max-unacked-packets-and.patch
 
 	patches.drivers/0001-mlx4_en-Added-missing-iounmap-upon-releasing-a-devic.patch
 	patches.drivers/0002-mlx4-allow-device-removal-by-fixing-dma-unmap-size.patch
