eCryptfs: Remove buggy and unnecessary write in file name decode routine (bsc#918333, CVE-2014-9683).

--- a/series.conf
+++ b/series.conf
@@ -2269,6 +2269,9 @@
 	patches.fixes/softirq-reduce-latencies.patch
 	patches.fixes/Fix-lockup-related-to-stop_machine-being-stuck-in-__.patch
 
+	# bsc#918333, CVE-2014-9683
+	patches.fixes/ecryptfs-remove-buggy-and-unnecessary-write-in-file-name-decode-routine.patch
+
 	########################################################
 	# Netfilter
 	########################################################
