IB/uverbs: Prevent integer overflow in ib_umem_get address arithmetic (bsc#914742, CVE-2014-8159).

--- a/series.conf
+++ b/series.conf
@@ -3319,6 +3319,9 @@
 	patches.fixes/net-Do-not-enable-tx-nocache-copy-by-default.patch
 	patches.fixes/net-sctp-fix-slab-corruption-from-use-after-free-on-INIT.patch
 
+	# bsc#914742, CVE-2014-8159
+	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
