--- a/series.conf
+++ b/series.conf
@@ -17194,6 +17194,10 @@
 	patches.arch/01-x86-tls-ldt-stop-checking-lm-in-ldt_empty.patch
 	patches.arch/02-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
 
+	# CVE-2015-3339 bnc#928130
+	# This depends on SECCOMP MODE 2 patches (current->no_new_privs)
+	patches.fixes/fs-take-i_mutex-during-prepare_binprm-for-set-ug-id.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
