vfs: Fix race between fcntl() and file->f_flags checks (bnc#900881 CVE-2014-8086).

--- a/series.conf
+++ b/series.conf
@@ -2200,6 +2200,7 @@
 	patches.fixes/NFS-Adapt-readdirplus-to-application-usage-patterns.patch
 	patches.fixes/nfs-lock-recovery.fix
 	patches.fixes/SUNRPC-Fix-a-data-corruption-issue-when-retransmitti.patch
+	patches.fixes/vfs-fix-race-between-fcntl-and-file-f_flags-checks.patch	
 
 	########################################################
 	# Lustre enablement
