- x86/asm/entry/64: Remove a bogus 'ret_from_fork' optimization   (bsc#926240, CVE-2015-2830). - Refresh other Xen patches.

--- a/series.conf
+++ b/series.conf
@@ -22804,6 +22804,7 @@
 	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-x86_amd_interlagos_mem_alignment_perf_improve_2_4.patch
 	patches.xen/xen3-x86-dumpstack-Fix-printk_address-for-direct-addresse.patch
+	patches.xen/xen3-x86-asm-entry-64-remove-a-bogus-ret_from_fork-optimization.patch
 	patches.xen/xen3-0011-x86-efi-EFI-boot-stub-support.patch
 	patches.xen/xen3-dev_mem-read-write-beyond-EOF.patch
 	patches.xen/xen3-xlate_dev_mem_ptr-use-phys_addr_t.patch
