net: llc: use correct size for sysctl timeout entries (bsc#919007, CVE-2015-2041).

--- a/series.conf
+++ b/series.conf
@@ -12737,6 +12737,7 @@
 	patches.fixes/net-relax-rcvbuf-limits.patch
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
 	patches.fixes/ipv4-missing-sk_nulls_node_init-in-ping_unhash.patch
+	patches.fixes/net-llc-use-correct-size-for-sysctl-timeout-entries.patch
 
 	########################################################
 	# Wireless Networking
