ipv4: Missing sk_nulls_node_init() in ping_unhash() (bsc#929525, CVE-2015-3636).

--- a/series.conf
+++ b/series.conf
@@ -12736,6 +12736,7 @@
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
+	patches.fixes/ipv4-missing-sk_nulls_node_init-in-ping_unhash.patch
 
 	########################################################
 	# Wireless Networking
