ipv6: Don't reduce hop limit for an interface (bsc#922583, CVE-2015-2922).

--- a/series.conf
+++ b/series.conf
@@ -3326,6 +3326,7 @@
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
 	patches.fixes/ipv4-missing-sk_nulls_node_init-in-ping_unhash.patch
 	patches.fixes/net-llc-use-correct-size-for-sysctl-timeout-entries.patch
+	patches.fixes/ipv6-don-t-reduce-hop-limit-for-an-interface.patch
 
 	########################################################
 	# Wireless Networking
