ipv4: Missing sk_nulls_node_init() in ping_unhash() (bsc#929525, CVE-2015-3636).

--- a/series.conf
+++ b/series.conf
@@ -3324,6 +3324,7 @@
 
 	# bsc#914742, CVE-2014-8159
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
+	patches.fixes/ipv4-missing-sk_nulls_node_init-in-ping_unhash.patch
 
 	########################################################
 	# Wireless Networking
