--- a/series.conf
+++ b/series.conf
@@ -15236,6 +15236,9 @@
 	patches.fixes/crypto-include-crypto-module-prefix-in-template
 	patches.fixes/crypto-add-missing-crypto-module-aliases
 
+	# bsc#927257 CVE-2015-3331
+	patches.fixes/crypto-aesni-fix-memory-usage-in-GCM-decryption
+
 	##########################################################
 	# AppArmor
 	##########################################################
