--- a/series.conf
+++ b/series.conf
@@ -1768,6 +1768,8 @@
 	patches.fixes/new-helper-single_open_size.patch
 	patches.fixes/proc-stat-convert-to-single_open_size.patch
 
+	patches.fixes/pipe-fix-iov-overrun-for-failed-atomic-copy.patch
+
 	########################################################
 	# IPC patches
 	########################################################
