pipe: fix iov overrun for failed atomic copy (bsc#933429 CVE-2015-1805).

--- a/series.conf
+++ b/series.conf
@@ -999,6 +999,8 @@
 	patches.fixes/vfs-avoid-attempt-to-access-beyond-end-of-device-war.patch
 	patches.fixes/vfs-fix-O_DIRECT-read-past-end-of-block-device.patch
 
+	patches.fixes/pipe-fix-iov-overrun-for-failed-atomic-copy.patch
+
 	########################################################
 	# IPC patches
 	########################################################
