- pciback: limit guest control of command register (bsc#919463   CVE-2015-2150 XSA-120). - usbback: copy only filled buffers to guest (bsc#917830   CVE-2015-0777). - xenbus: add proper handling of XS_ERROR from Xenbus for   transactions. - x86, tls, ldt: Stop checking lm in LDT_empty (bsc#920250). - x86, tls: Interpret an all-zero struct user_desc as "no segment"   (bsc#920250). - x86/asm/entry/64: Remove a bogus 'ret_from_fork' optimization   (bsc#926240, CVE-2015-2830). - Refresh other Xen patches. - Delete patches.xen/xen-pciback-decode. - Delete patches.xen/xen-usbback-limit-copying. - Delete   patches.xen/xen3-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch.

--- a/series.conf
+++ b/series.conf
@@ -17355,6 +17355,9 @@
 	patches.xen/1276-scsifront-separate-flags.patch
 	patches.xen/1278-PCI-MSI-reject-res-with-clear-flags.patch
 	patches.xen/1279-vscsi-suspend-resume.patch
+	patches.xen/1281-pciback-decode.patch
+	patches.xen/1282-usbback-limit-copying.patch
+	patches.xen/1283-xenbus-XS_ERROR-handling.patch
 
 	# changes outside arch/{i386,x86_64}/xen
 	patches.xen/xen3-fixup-kconfig
@@ -17414,6 +17417,7 @@
 	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-x86_amd_interlagos_mem_alignment_perf_improve_2_4.patch
 	patches.xen/xen3-x86-dumpstack-Fix-printk_address-for-direct-addresse.patch
+	patches.xen/xen3-x86-asm-entry-64-remove-a-bogus-ret_from_fork-optimization.patch
 	patches.xen/xen3-0011-x86-efi-EFI-boot-stub-support.patch
 	patches.xen/xen3-dev_mem-read-write-beyond-EOF.patch
 	patches.xen/xen3-xlate_dev_mem_ptr-use-phys_addr_t.patch
@@ -17469,8 +17473,9 @@
 	patches.xen/xen3-x86_64-traps-fix-the-espfix64-df-fixup-and-rewrite-it-in-c.patch
 	patches.xen/xen3-x86_64-traps-stop-using-ist-for-ss.patch
 	patches.xen/xen3-x86_64-traps-rework-bad_iret.patch
-	patches.xen/xen3-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
 	patches.xen/xen3-x86-irq-check-for-valid-irq-descriptor-in-check_irq_vectors_for_cpu_disable
+	patches.xen/xen3-01-x86-tls-ldt-stop-checking-lm-in-ldt_empty.patch
+	patches.xen/xen3-02-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
 
 	# bugfixes and enhancements
 	patches.xen/xen-hypercall-symbols
@@ -17516,9 +17521,7 @@
 	patches.xen/xen-netback-kernel-threads
 	patches.xen/xen-netback-tx-queue-len
 	patches.xen/xen-netfront-poll
-	patches.xen/xen-pciback-decode
 	patches.xen/xen-vscsi-large-requests
-	patches.xen/xen-usbback-limit-copying
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
 	patches.xen/xen-x86-panic-no-reboot
