udf: Check length of extended attributes and allocation descriptors (bsc#933907 CVE-2015-4167).

--- a/series.conf
+++ b/series.conf
@@ -5181,6 +5181,7 @@
 	patches.fixes/udf-Check-path-length-when-reading-symlink.patch
 	patches.fixes/udf-Check-component-length-before-reading-it.patch
 	patches.fixes/udf-Remove-repeated-loads-blocksize.patch
+	patches.fixes/udf-Check-length-of-extended-attributes-and-allocati.patch
 	patches.fixes/vfs-fix-race-between-fcntl-and-file-f_flags-checks.patch
 
 	########################################################
