--- a/series.conf
+++ b/series.conf
@@ -1149,6 +1149,7 @@
 	patches.fixes/macvlan-introduce-IFF_MACVLAN-flag-and-helper-functi.patch
 	patches.fixes/macvlan-introduce-macvlan_dev_real_dev-helper-functi.patch
 	patches.fixes/macvlan-disable-LRO-on-lower-device-instead-of-macvl.patch
+	patches.fixes/x86-bpf_jit-fix-compilation-of-large-bpf-programs
 
 	########################################################
 	# NFS
