--- a/series.conf
+++ b/series.conf
@@ -1000,6 +1000,7 @@
 	patches.fixes/vfs-fix-O_DIRECT-read-past-end-of-block-device.patch
 
 	patches.fixes/pipe-fix-iov-overrun-for-failed-atomic-copy.patch
+	patches.fixes/vfs-read-file_handle-only-once-in-handle_to_path.patch
 
 	########################################################
 	# IPC patches
