udp: fix behavior of wrong checksums (bsc#936831, CVE-2015-5364).

--- a/series.conf
+++ b/series.conf
@@ -3331,6 +3331,7 @@
 	patches.fixes/ipv4-missing-sk_nulls_node_init-in-ping_unhash.patch
 	patches.fixes/net-llc-use-correct-size-for-sysctl-timeout-entries.patch
 	patches.fixes/ipv6-don-t-reduce-hop-limit-for-an-interface.patch
+	patches.fixes/udp-fix-behavior-of-wrong-checksums.patch
 
 	########################################################
 	# Wireless Networking
