vhost: actually track log eventfd file (bsc#942367, CVE-2015-6252).

--- a/series.conf
+++ b/series.conf
@@ -4306,6 +4306,9 @@
 	patches.fixes/random-fix-accounting-race-condition-with-lockless-i.patch
 	patches.drivers/watchdog-get-rid-of-module_alias_miscdev-statements.patch
 
+	# bsc#942367, CVE-2015-6252
+	patches.drivers/vhost-actually-track-log-eventfd-file.patch
+
 	########################################################
 	# Other drivers we have added to the tree
 	########################################################
