x86/ldt: Correct LDT access in single stepping logic (bsc#938706, CVE-2015-5157).

--- a/series.conf
+++ b/series.conf
@@ -17501,6 +17501,7 @@
 	patches.fixes/06-x86-nmi-64-switch-stacks-on-userspace-nmi-entry.patch
 	patches.fixes/07-rcu-move-lockless_dereference-out-of-rcupdate-h.patch
 	patches.fixes/08-x86-ldt-make-modify_ldt-synchronous.patch
+	patches.fixes/jg03-correct-ldt-single-step.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
