--- a/series.conf
+++ b/series.conf
@@ -17500,6 +17500,7 @@
 	# bsc#F938706, CVE-2015-5157
 	patches.fixes/06-x86-nmi-64-switch-stacks-on-userspace-nmi-entry.patch
 	patches.fixes/07-rcu-move-lockless_dereference-out-of-rcupdate-h.patch
+	patches.fixes/08-x86-ldt-make-modify_ldt-synchronous.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
