x86/ldt: Further fix FPU emulation (bsc#938706, CVE-2015-5157).

--- a/series.conf
+++ b/series.conf
@@ -17503,6 +17503,7 @@
 	patches.fixes/08-x86-ldt-make-modify_ldt-synchronous.patch
 	patches.fixes/jg03-correct-ldt-single-step.patch
 	patches.fixes/jg04-correct-ldt-math-emu.patch
+	patches.fixes/x86-ldt-further-fix-fpu-emulation.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
