x86/ldt: Correct FPU emulation access to LDT (bsc#938706, CVE-2015-5157).

--- a/series.conf
+++ b/series.conf
@@ -17502,6 +17502,7 @@
 	patches.fixes/07-rcu-move-lockless_dereference-out-of-rcupdate-h.patch
 	patches.fixes/08-x86-ldt-make-modify_ldt-synchronous.patch
 	patches.fixes/jg03-correct-ldt-single-step.patch
+	patches.fixes/jg04-correct-ldt-math-emu.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
