--- a/series.conf
+++ b/series.conf
@@ -17496,6 +17496,10 @@
 
 	# bnc#935757
 	patches.drivers/0001-fix-lpfc_send_rscn_event-sends-bigger-buffer-size.patch
+
+	# bsc#F938706, CVE-2015-5157
+	patches.fixes/06-x86-nmi-64-switch-stacks-on-userspace-nmi-entry.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
