RDS: verify the underlying transport exists before creating a connection (bsc#945825, CVE-2015-6937).

--- a/series.conf
+++ b/series.conf
@@ -3335,6 +3335,9 @@
 	patches.fixes/ipv6-don-t-reduce-hop-limit-for-an-interface.patch
 	patches.fixes/udp-fix-behavior-of-wrong-checksums.patch
 
+	# bsc#945825, CVE-2015-6937
+	patches.fixes/rds-verify-the-underlying-transport-exists-before-creating-a-connection.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
