- x86/ldt: Make modify_ldt synchronous (bsc#938706,   CVE-2015-5157). - Refresh patches.xen/1282-usbback-limit-copying.patch (bsc#941202). - Refresh other Xen patches.

--- a/series.conf
+++ b/series.conf
@@ -17694,6 +17694,7 @@
 	patches.xen/xen3-x86-irq-check-for-valid-irq-descriptor-in-check_irq_vectors_for_cpu_disable
 	patches.xen/xen3-01-x86-tls-ldt-stop-checking-lm-in-ldt_empty.patch
 	patches.xen/xen3-02-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
+	patches.xen/xen3-08-x86-ldt-make-modify_ldt-synchronous.patch
 
 	# bugfixes and enhancements
 	patches.xen/xen-hypercall-symbols
