- usbback: correct copy length for partial transfers (bsc#941202). - x86/ldt: Make modify_ldt synchronous (bsc#938706, CVE-2015-5157). - Refresh other Xen patches.

--- a/series.conf
+++ b/series.conf
@@ -23105,6 +23105,7 @@
 	patches.xen/xen3-fixup-xen
 
 	# newer changeset backports
+	patches.xen/1293-usbback-partial-transfer-copy-length.patch
 
 	# changes outside arch/{i386,x86_64}/xen
 	patches.xen/xen3-fixup-kconfig
@@ -23229,6 +23230,7 @@
 	patches.xen/xen3-02-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
 	patches.xen/xen3-0001-x86-efi-Add-EFI-framebuffer-earlyprintk-support.patch
 	patches.xen/xen3-x86-64-don-t-apply-destructive-erratum-workaround-on-unaffected-cpus
+	patches.xen/xen3-08-x86-ldt-make-modify_ldt-synchronous.patch
 
 	# bugfixes and enhancements
 	patches.xen/xen-hypercall-symbols
