ipv6: addrconf: validate new MTU before applying it (bsc#944296 CVE-2015-0272).

--- a/series.conf
+++ b/series.conf
@@ -1151,6 +1151,7 @@
 	patches.fixes/macvlan-introduce-macvlan_dev_real_dev-helper-functi.patch
 	patches.fixes/macvlan-disable-LRO-on-lower-device-instead-of-macvl.patch
 	patches.fixes/x86-bpf_jit-fix-compilation-of-large-bpf-programs
+	patches.fixes/ipv6-addrconf-validate-new-MTU-before-applying-it.patch
 
 	########################################################
 	# NFS
