KEYS: Fix crash when attempt to garbage collect an uninstantiated keyring (CVE-2015-7872 bsc#951440).

--- a/series.conf
+++ b/series.conf
@@ -4480,6 +4480,7 @@
 	# bnc#951440 CVE-2015-7872
 	patches.fixes/0001-KEYS-Fix-race-between-key-destruction-and-finding-a-.patch
 	patches.fixes/0002-KEYS-Don-t-permit-request_key-to-construct-a-new-key.patch
+	patches.fixes/0003-KEYS-Fix-crash-when-attempt-to-garbage-collect-an-un.patch
 
 	##########################################################
 	# AppArmor
