KEYS: Don't permit request_key() to construct a new keyring (CVE-2015-7872 bsc#951440).

--- a/series.conf
+++ b/series.conf
@@ -4479,6 +4479,7 @@
 	patches.fixes/kvm-x86-convert-vapic-synchronization-to-cached-functions-cve-2013-6368.patch
 	# bnc#951440 CVE-2015-7872
 	patches.fixes/0001-KEYS-Fix-race-between-key-destruction-and-finding-a-.patch
+	patches.fixes/0002-KEYS-Don-t-permit-request_key-to-construct-a-new-key.patch
 
 	##########################################################
 	# AppArmor
