x86/nmi/64: Fix a paravirt stack-clobbering bug in the NMI code (bsc#938706, CVE-2015-5157).

--- a/series.conf
+++ b/series.conf
@@ -17542,13 +17542,14 @@
 	# bnc#935757
 	patches.drivers/0001-fix-lpfc_send_rscn_event-sends-bigger-buffer-size.patch
 
-	# bsc#F938706, CVE-2015-5157
+	# bsc#938706, CVE-2015-5157
 	patches.fixes/06-x86-nmi-64-switch-stacks-on-userspace-nmi-entry.patch
 	patches.fixes/07-rcu-move-lockless_dereference-out-of-rcupdate-h.patch
 	patches.fixes/08-x86-ldt-make-modify_ldt-synchronous.patch
 	patches.fixes/jg03-correct-ldt-single-step.patch
 	patches.fixes/jg04-correct-ldt-math-emu.patch
 	patches.fixes/x86-ldt-further-fix-fpu-emulation.patch
+	patches.fixes/01-x86-nmi-64-fix-a-paravirt-stack-clobbering-bug-in-the-nmi-code.patch
 
 	# bsc#948521
 	patches.fixes/macvlan-Support-bonding-events.patch
