x86/paravirt: Replace the paravirt nop with a bona fide empty function (bsc#938706, CVE-2015-5157).

--- a/series.conf
+++ b/series.conf
@@ -17550,6 +17550,7 @@
 	patches.fixes/jg04-correct-ldt-math-emu.patch
 	patches.fixes/x86-ldt-further-fix-fpu-emulation.patch
 	patches.fixes/01-x86-nmi-64-fix-a-paravirt-stack-clobbering-bug-in-the-nmi-code.patch
+	patches.fixes/02-x86-paravirt-replace-the-paravirt-nop-with-a-bona-fide-empty-function.patch
 
 	# bsc#948521
 	patches.fixes/macvlan-Support-bonding-events.patch
